--- a/static/index.html
+++ b/static/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html  lang="ru">
   <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <script type="module" src="./index.js"></script>
   </head>
   <body>
