--- a/static/index.html
+++ b/static/index.html
@@ -2,7 +2,7 @@
 <html  lang="ru">
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
-    <script type="module" src="./index.js"></script>
+    <script type="module" src="./index.ts"></script>
   </head>
   <body>
     <main id="root"></main>
